[MOD] Закомментирована часть фильтров

--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesFilters/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesFilters/Default.cshtml
@@ -4,10 +4,10 @@
 <div class="col-sm-4 col-md-3">
 
     <div class="section-title-02">
-        <h4><span>Filter Your Result</span></h4>
+        <h4><span>Фільтри</span></h4>
     </div>
 
-    <div class="sidebar-module">
+    <!--<div class="sidebar-module">
         <h5>Price Range</h5>
         <div class="range-slider-wrapper">
             <input id="price_range" />
@@ -19,7 +19,7 @@
         <div class="range-slider-wrapper">
             <input id="star_rating_range" />
         </div>
-    </div>
+    </div>-->
 
     <div class="sidebar-module">
         <h5>Категорії</h5>
@@ -44,9 +44,9 @@
         </div>
     </div>
 
-    <div class="sidebar-module">
+    <!--<div class="sidebar-module">
         <h5>Sidebar Text</h5>
         <p>Attachment apartments in delightful by motionless it no. And now she burst sir learn total. Hearing hearted shewing own ask. Solicitude uncommonly use her motionless not collecting age. The properly servants required mistaken outlived bed and.</p>
-    </div>
+    </div>-->
 
 </div>
