--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -1,158 +1,159 @@
 ﻿<!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
   <!-- start hero-header -->
-  <div class="hero hero-breadcrumb" style="background-image:url('images/hero-header/03.jpg');">
+  <div class="hero hero-breadcrumb" style="background-image:url('../../images/hero-header/03.jpg');">
     <div class="container">
       <h1>Add your restuarant</h1>
       <p>Get more eater &amp; Drinker</p>
     </div>
   </div>
-  <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data">
-    <div class="container pt-10 pb-30">
-      <div class="breadcrumb-wrapper">
-        <ol class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li class="active">Add your restuarant</li>
-        </ol>
-      </div>
-      <div class="row mt-40 mb-30">
-          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-              <div class="notify-box">
-                  <div class="notify-inner">
-                      <p> If you don’t have an account you can create one below by entering your email address/username. Your account details will be confirmed via email.</p>
-                      <a href="#" class="btn btn-primary btn-sm btn-absolute">Sign-up</a>
-                  </div>
-              </div>
-              <div class="submite-list-wrapper">
-                  <div class="row">
-                      <div class="col-md-8">
-                          <div class="section-title-02 mb-20">
-                              <h3><span>Background Information</span></h3>
-                              <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="submite-list-box">
-                      <div class="row ga-20">
-                          <div class="col-xs-12 col-sm-12">
-                              <div class="form-group form-group-lg">
-                                  <label>Restuarant name:</label>
-                                  <input type="text" class="form-control" name="Name"/>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-12">
-                              <div class="form-group bootstrap3-wysihtml5-wrapper">
-                                  <label>Restuarant information:</label>
-                                  <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Enter text ..." style="height: 200px;"></textarea>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="row gap-20 mt-15">
-                          <div class="col-xs-12 col-sm-12 col-md-12">
-                              <label class="block">Категорії</label>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-1" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-1">Visa</label>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-2" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-2">Master card</label>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-3" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-3">American Express</label>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-4" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-4">Paypal</label>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-5" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-5">Citibank Cash Back </label>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="checkbox-block font-icon-checkbox">
-                                  <input id="filter_cuisine-6" name="filter_cuisine" type="checkbox" class="checkbox"/>
-                                  <label class="" for="filter_cuisine-6"> Krungsri Credit Card</label>
-                              </div>
-                          </div>
-                      </div>
-                      <h6 class="text-primary text-uppercase mt-15">Адреса &amp; Контакти</h6>
-                      <div class="row gap-20">
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="form-group">
-                                  <label>Місто</label>
-                                  <input type="text" class="form-control" name="city"/>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="form-group">
-                                  <label>Вулиця</label>
-                                  <input type="text" class="form-control" name="street"/>
-                              </div>
-                          </div>
-                          <div class="col-xs-12 col-sm-4">
-                              <div class="form-group">
-                                  <label>Адреса</label>
-                                  <input type="text" class="form-control" name="address"/>
-                              </div>
-                          </div>
-                          <div class="col-xss-12 col-xs-6 col-sm-4">
-                              <div class="form-group">
-                                  <label>Телефон</label>
-                                  <input type="text" class="form-control" name="phone"/>
-                              </div>
-                          </div>
-                          <div class="col-xss-12 col-xs-6 col-sm-4">
-                              <div class="form-group">
-                                  <label>Email</label>
-                                  <input type="email" class="form-control" name="email"/>
-                              </div>
-                          </div>
-                          <div class="col-xss-12 col-xs-6 col-sm-4">
-                              <div class="form-group">
-                                  <label>Веб сайт</label>
-                                  <input type="text" class="form-control" name="website"/>
-                              </div>
-                          </div>
-                      </div>
-                      <h6 class="text-primary text-uppercase mt-15">Map</h6>
-                      <div id="map-simple" class="map-submit mb-40"></div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-8">
-                          <div class="section-title-02 mb-20">
-                              <h3><span>Photos</span></h3>
-                              <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="submite-list-box">
-                      <div id="file-submit" class="dropzone">
-                          <input name="files" type="file" multiple>
-                          <div class="dz-default dz-message"><span>Click or Drop Images Here</span></div>
-                      </div>
-                  </div>
-                  <div class="checkbox-block font-icon-checkbox">
-                      <input id="term_accept-1" name="TermAccept" type="checkbox" class="checkbox"/>
-                      <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
-                  </div>
-                  <input type="submit" class="btn btn-primary mt-15" value="Submit"/>
-              </div>
-          </div>
-      </div>
-    </div>
-  </form>
+    <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data">
+        <input id="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()"/>
+        <div class="container pt-10 pb-30">
+            <div class="breadcrumb-wrapper">
+                <ol class="breadcrumb">
+                    <li><a href="#">Home</a></li>
+                    <li class="active">Add your restuarant</li>
+                </ol>
+            </div>
+            <div class="row mt-40 mb-30">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                    <div class="notify-box">
+                        <div class="notify-inner">
+                            <p> If you don’t have an account you can create one below by entering your email address/username. Your account details will be confirmed via email.</p>
+                            <a href="#" class="btn btn-primary btn-sm btn-absolute">Sign-up</a>
+                        </div>
+                    </div>
+                    <div class="submite-list-wrapper">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="section-title-02 mb-20">
+                                    <h3><span>Background Information</span></h3>
+                                    <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="submite-list-box">
+                            <div class="row ga-20">
+                                <div class="col-xs-12 col-sm-12">
+                                    <div class="form-group form-group-lg">
+                                        <label>Restuarant name:</label>
+                                        <input type="text" class="form-control" name="Name"/>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-12">
+                                    <div class="form-group bootstrap3-wysihtml5-wrapper">
+                                        <label>Restuarant information:</label>
+                                        <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Enter text ..." style="height: 200px;"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row gap-20 mt-15">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                    <label class="block">Категорії</label>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-1" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-1">Visa</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-2" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-2">Master card</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-3" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-3">American Express</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-4" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-4">Paypal</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-5" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-5">Citibank Cash Back </label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="checkbox-block font-icon-checkbox">
+                                        <input id="filter_cuisine-6" name="filter_cuisine" type="checkbox" class="checkbox"/>
+                                        <label class="" for="filter_cuisine-6"> Krungsri Credit Card</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <h6 class="text-primary text-uppercase mt-15">Адреса &amp; Контакти</h6>
+                            <div class="row gap-20">
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Місто</label>
+                                        <input type="text" class="form-control" name="city"/>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Вулиця</label>
+                                        <input type="text" class="form-control" name="street"/>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Адреса</label>
+                                        <input type="text" class="form-control" name="address"/>
+                                    </div>
+                                </div>
+                                <div class="col-xss-12 col-xs-6 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Телефон</label>
+                                        <input type="text" class="form-control" name="phone"/>
+                                    </div>
+                                </div>
+                                <div class="col-xss-12 col-xs-6 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input type="email" class="form-control" name="email"/>
+                                    </div>
+                                </div>
+                                <div class="col-xss-12 col-xs-6 col-sm-4">
+                                    <div class="form-group">
+                                        <label>Веб сайт</label>
+                                        <input type="text" class="form-control" name="website"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <h6 class="text-primary text-uppercase mt-15">Map</h6>
+                            <div id="map-simple" class="map-submit mb-40"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="section-title-02 mb-20">
+                                    <h3><span>Photos</span></h3>
+                                    <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="submite-list-box">
+                            <div id="new-place" class="dropzone">
+                                <input name="files" type="file" multiple>
+                                <div class="dz-default dz-message"><span>Click or Drop Images Here</span></div>
+                            </div>
+                        </div>
+                        <div class="checkbox-block font-icon-checkbox">
+                            <input id="term_accept-1" name="TermAccept" type="checkbox" class="checkbox"/>
+                            <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
+                        </div>
+                        <input type="submit" class="btn btn-primary mt-15" value="Submit"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
 <!-- end Main Wrapper -->
