--- a/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
@@ -20,7 +20,7 @@
             <div class="restaurant-grid-item">
                 <a href="#">
                     <div class="image">
-                        <img src="images/restaurant/01.jpg" alt="Image" />
+                        <img src="../../images/restaurant/01.jpg" alt="Image" />
                     </div>
                     <div class="content">
                         <h5>The Smokin' Pug</h5>
@@ -41,7 +41,7 @@
             <div class="restaurant-grid-item">
                 <a href="#">
                     <div class="image">
-                        <img src="images/restaurant/02.jpg" alt="Image" />
+                        <img src="../../images/restaurant/02.jpg" alt="Image" />
                     </div>
                     <div class="content">
                         <h5>J'AIME by Jean-Michel Lorain</h5>
@@ -62,7 +62,7 @@
             <div class="restaurant-grid-item">
                 <a href="#">
                     <div class="image">
-                        <img src="images/restaurant/03.jpg" alt="Image" />
+                        <img src="../../images/restaurant/03.jpg" alt="Image" />
                     </div>
                     <div class="content">
                         <h5>DID - Dine in the Dark </h5>
@@ -83,7 +83,7 @@
             <div class="restaurant-grid-item">
                 <a href="#">
                     <div class="image">
-                        <img src="images/restaurant/04.jpg" alt="Image" />
+                        <img src="../../images/restaurant/04.jpg" alt="Image" />
                     </div>
                     <div class="content">
                         <h5>JP French Restaurant </h5>
