--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
@@ -27,7 +27,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/01.jpg" alt="image" />
+                                            <img src="../../images/item-sq/01.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -50,7 +50,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/02.jpg" alt="image" />
+                                            <img src="../../images/item-sq/02.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -73,7 +73,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/03.jpg" alt="image" />
+                                            <img src="../../images/item-sq/03.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -96,7 +96,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/04.jpg" alt="image" />
+                                            <img src="../../images/item-sq/04.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -119,7 +119,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/05.jpg" alt="image" />
+                                            <img src="../../images/item-sq/05.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -142,7 +142,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/06.jpg" alt="image" />
+                                            <img src="../../images/item-sq/06.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -194,7 +194,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/04.jpg" alt="image" />
+                                            <img src="../../images/item-sq/04.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -217,7 +217,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/05.jpg" alt="image" />
+                                            <img src="../../images/item-sq/05.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -240,7 +240,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/06.jpg" alt="image" />
+                                            <img src="../../images/item-sq/06.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -263,7 +263,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/01.jpg" alt="image" />
+                                            <img src="../../images/item-sq/01.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -286,7 +286,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/02.jpg" alt="image" />
+                                            <img src="../../images/item-sq/02.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -309,7 +309,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/03.jpg" alt="image" />
+                                            <img src="../../images/item-sq/03.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -503,7 +503,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/01.jpg" alt="image" />
+                                            <img src="../../images/item-sq/01.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -526,7 +526,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/02.jpg" alt="image" />
+                                            <img src="../../images/item-sq/02.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -549,7 +549,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/03.jpg" alt="image" />
+                                            <img src="../../images/item-sq/03.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -572,7 +572,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/04.jpg" alt="image" />
+                                            <img src="../../images/item-sq/04.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -595,7 +595,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/05.jpg" alt="image" />
+                                            <img src="../../images/item-sq/05.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
@@ -618,7 +618,7 @@
                                     <div class="food-menu-item clearfix">
 
                                         <div class="image">
-                                            <img src="images/item-sq/06.jpg" alt="image" />
+                                            <img src="../../    images/item-sq/06.jpg" alt="image" />
                                         </div>
 
                                         <div class="content">
