--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
@@ -15,7 +15,7 @@
 
     </div>
 
-    <div class="hero-kb_elastic-inner search-margin-top">
+    <div class="hero-kb_elastic-inner search-margin-top" style="background-image: url('../../@Model.Images.First()'); margin-top:-25px; z-index:1000;">
 
         <div class="container">
 
@@ -24,14 +24,15 @@
 
             <div class="home-search-form mt-20-xs">
 
-                <form>
+                <form asp-action="Places" name="FormPalces">
 
                     <div class="form-group location-form">
-                        <input type="text" class="form-control" placeholder="Where would you like to eat?">
+                        <input type="input" class="form-control" placeholder="Where would you like to eat?">
                     </div>
 
                     <div class="form-group">
-                        <select class="custom-select" id="category-type">
+                        <select name="categories" class="custom-select" id="category-type">
+                            <option selected="true" disabled="disabled">Всі кухні</option>
                             @foreach (var category in Model.Categories)
                             {
                                 <option value="@category.Id">@category.Name</option>
@@ -40,8 +41,9 @@
                     </div>
 
                     <div class="form-group">
-                        <select class="custom-select" id="city-type">
-                            @foreach (var city in Model.Cities)
+                        <select name="cities" class="custom-select" id="city-type">
+                            <option selected="true" disabled="disabled">Всі міста</option>
+                             @foreach (var city in Model.Cities)
                             {
                                 <option value="@city.Id">@city.Name</option>
                             }
