--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero search-margin-top" style="background-image:url('@Model.Images.First()'); margin-top:-25px;">
+<div class="hero search-margin-top" style="background-image:url('../../@Model.Images.First()'); margin-top:-25px;">
     <div class="container">
 
         @Html.Raw(Model.Strings["TitleFirstLabelCaption"])
@@ -10,14 +10,15 @@
 
         <div class="home-search-form">
 
-            <form>
+            <form asp-action="Places" name="FormPalces">
 
                 <div class="form-group location-form">
-                    <input type="text" class="form-control" placeholder="Where would you like to eat?">
+                    <input type="input" class="form-control" placeholder="Where would you like to eat?">
                 </div>
 
                 <div class="form-group">
-                    <select class="custom-select" id="category-type">
+                    <select name="categories" class="custom-select" id="category-type">
+                        <option selected="true" disabled="disabled">Всі кухні</option>
                         @foreach (var category in Model.Categories)
                         {
                             <option value="@category.Id">@category.Name</option>
@@ -26,7 +27,8 @@
                 </div>
 
                 <div class="form-group">
-                    <select class="custom-select" id="city-type">
+                    <select name="cities" class="custom-select" id="city-type">
+                        <option selected="true" disabled="disabled">Всі міста</option>
                         @foreach (var city in Model.Cities)
                         {
                             <option value="@city.Id">@city.Name</option>
